# examples

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  README.md
qml-player/: CMakeLists.txt  LICENSE.md  README.md
qml-player/osx/: CMakeLists.txt
qml-player/src/: CMakeLists.txt  main.cpp
qml-player/src/qml/: video.qml
qml-player/windows/: CMakeLists.txt  Project.rc.in
simple-player/: .gitignore  CMakeLists.txt  README.md  simple-player.pro
simple-player/cmake/: cmake_uninstall.cmake.in
simple-player/osx/: CMakeLists.txt  Info.plist.in
simple-player/src/: CMakeLists.txt  EqualizerDialog.cpp  EqualizerDialog.h  SimplePlayer.cpp  SimplePlayer.h  SimplePlayer.ui  main.cpp  src.pro
simple-player/windows/: CMakeLists.txt  Project.rc.in
tools/ci/linux/: after_success.sh  before_install.sh  install.sh  script.sh
tools/ci/osx/: after_success.sh  before_install.sh  install.sh  script.sh
